chore(ContactUsDetails): fix margins and alignment

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/_brandColors.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/_brandColors.scss
@@ -68,6 +68,8 @@ $stockport-black: #333333;
 $stockport-alert-red: #B33A2D;
 $stockport-grey-lighter: #ccc;
 
+$stockport-red-validation: #c83725;
+
 $one-stockport-purple: #410099;
 $one-stockport-pink: rgb(250,133,143);
 
